--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
       <section class="ad-container">
         <div class="row justify-content-md-center contariner-ads"></div>
       </section>
+      <section class="vd-ads">
+        <video src="./video/shop shirt ad.mp4" autoplay muted loop></video>
+        <div class="vd-ads-body">
+          <h1>Online Shop x MM</h1>
+          <span>MOVE WITHOUT LIMITS</span>
+          <div class="vd-ads-btn-gp">
+            <button type="button" class="btn btn-light ads-btn">
+              Shop Now
+            </button>
+            <button type="button" class="btn btn-light ads-btn">
+              Learn More
+            </button>
+          </div>
+        </div>
+      </section>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
