--- a/index.html
+++ b/index.html
@@ -70,15 +70,19 @@
           <h1>Online Shop x MM</h1>
           <span>MOVE WITHOUT LIMITS</span>
           <div class="vd-ads-btn-gp">
-            <button type="button" class="btn btn-light ads-btn">
-              Shop Now
-            </button>
-            <button type="button" class="btn btn-light ads-btn">
-              Learn More
-            </button>
+            <a href="product.html" class="btn btn-light ads-btn"> Shop Now </a>
+            <a href="about.html" class="btn btn-light ads-btn"> Learn More </a>
           </div>
         </div>
       </section>
+      <section class="company">
+        <img src="https://uptimerobot.com/assets/images/godaddy-logo.svg" />
+        <img src="https://uptimerobot.com/assets/images/nasa.svg" />
+        <img src="https://uptimerobot.com/assets/images/moodys-logo.svg" />
+        <img src="https://uptimerobot.com/assets/images/ibm-logo.svg" />
+        <img src="https://uptimerobot.com/assets/images/expedia-logo.svg" />
+      </section>
+      <footer></footer>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
