--- a/index.html
+++ b/index.html
@@ -82,7 +82,37 @@
         <img src="https://uptimerobot.com/assets/images/ibm-logo.svg" />
         <img src="https://uptimerobot.com/assets/images/expedia-logo.svg" />
       </section>
-      <footer></footer>
+      <footer>
+        <div class="row justify-content-md-center footer-section">
+          <div class="col-sm-2">
+            <h5>Links</h5>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">about</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Your Shopping Card</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-2">
+            <h5>How To</h5>
+            <ul>
+              <li><a href="#">How Do I Add Porducts</a></li>
+              <li><a href="#">How To Check My Card</a></li>
+              <li><a href="#">How To Search Products</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-2">
+            <h5>FeedBack</h5>
+            <ul>
+              <li><a href="#">SendFeed Back</a></li>
+              <li><a href="#">Developers</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="end-foot">
+          Create By <a href="#" class="link-primary">Developers</a> &copy;2022
+        </div>
+      </footer>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
