--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
           <div class="col-sm-2">
             <h5>Links</h5>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">about</a></li>
-              <li><a href="#">Products</a></li>
-              <li><a href="#">Your Shopping Card</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">about</a></li>
+              <li><a href="ptoduct.html">Products</a></li>
+              <li><a href="card.html">Your Shopping Card</a></li>
             </ul>
           </div>
           <div class="col-sm-2">
@@ -104,13 +104,16 @@
           <div class="col-sm-2">
             <h5>FeedBack</h5>
             <ul>
-              <li><a href="#">SendFeed Back</a></li>
-              <li><a href="#">Developers</a></li>
+              <li>
+                <a href="mailto:minkhsntsaw04@gmail.com">Send FeedBack</a>
+              </li>
             </ul>
           </div>
         </div>
         <div class="end-foot">
-          Create By <a href="#" class="link-primary">Developers</a> &copy;2022
+          Create By
+          <a href="#" class="link-primary">Developers</a> &copy;Online Store MM
+          2022
         </div>
       </footer>
     </div>
