--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <!-- About -->
     <div class="aboutStart">
       <div>
-        <h1>Hello! Welcome to my web site</h1>
+        <h1>Hello! Welcome to Online Shop MM</h1>
         <h5>All your favorite is here</h5>
         <button>Download App</button>
       </div>
