--- a/about.html
+++ b/about.html
@@ -78,11 +78,16 @@
           <span>🇲🇲Myanmar</span>
         </div>
         <div class="bottom">
-          <h4>Already a customer?Sign In</h4>
+          <h4>Already a customer?&thinsp;Sign In</h4>
           <span>Condition of use</span>
           <span>Privacy Notice</span>
           <span>Based Ads</span>
         </div>
+      </div>
+      <div class="end-foot">
+        Create By
+        <a href="#" class="link-primary">Developers</a> &copy;Online Store MM
+        2022
       </div>
     </div>
     <script
