--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     <!-- Text -->
     <div class="text">
       <h3>Online shop</h3>
-      <h5>
+      <span>
         Shopping is an activity in which a customer browses the available goods
         or services presented by one or more retailers with the potential intent
         to purchase a suitable selection of them.Amazon.com, Inc. is an American
@@ -66,7 +66,7 @@
         computing, digital streaming, and artificial intelligence. It has been
         referred to as "one of the most influential economic and cultural forces
         in the world", and is one of the world's most valuable brands
-      </h5>
+      </span>
     </div>
 
     <!-- The End -->
