--- a/about.html
+++ b/about.html
@@ -38,17 +38,17 @@
       <div class="pDiv">
         <img src="./Image/p2.jpg" alt="photo" />
         <h4>Shop better</h4>
-        <h5>Discover new arrivals from your favorite stores first.</h5>
+        <h6>Discover new arrivals from your favorite stores first.</h6>
       </div>
       <div class="pDiv">
         <img src="./Image/p1.jpg" alt="photo" />
         <h4>Pay better</h4>
-        <h5>Speed safely through checkout and plant trees at no extra cost.</h5>
+        <h6>Speed safely through checkout and plant trees at no extra cost.</h6>
       </div>
       <div class="pDiv">
         <img src="./Image/p3.jpg" alt="photo" />
         <h4>Track better</h4>
-        <h5>Get real-time delivery updates from cart to home in one place.</h5>
+        <h6>Get real-time delivery updates from cart to home in one place.</h6>
       </div>
     </div>
 
@@ -73,9 +73,8 @@
     <div class="end">
       <div style="padding: 20px 0px">
         <div class="top">
-          <span>English</span>
-          <span>$MM-MMK</span>
-          <span>🇲🇲Myanmar</span>
+          <span>English</span>&thinsp; <span>$MM-MMK</span>&thinsp;
+          <span>🇲🇲Myanmar</span>&thinsp;
         </div>
         <div class="bottom">
           <h4>Already a customer?&thinsp;Sign In</h4>
