--- a/product.html
+++ b/product.html
@@ -50,11 +50,15 @@
                 Chose Products
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Men Products</a></li>
-                <li><a class="dropdown-item" href="#">Girl Products</a></li>
+                <li>
+                  <a class="dropdown-item drop-i" href="#">Men Products</a>
+                </li>
+                <li>
+                  <a class="dropdown-item drop-i" href="#">Girl Products</a>
+                </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Computer Products</a>
+                  <a class="dropdown-item drop-i" href="#">Computer Products</a>
                 </li>
               </ul>
             </li>
