--- a/your card.html
+++ b/your card.html
@@ -21,7 +21,181 @@
     <title>My Card</title>
   </head>
   <body>
-    <div class="container-xl"></div>
+    <div class="container">
+      <div class="row justify-content-md-center bg-dark">
+        <div class="col-lg my-2">
+          <div class="card" style="max-width: 1000px">
+            <img
+              src="./Image/iphone.jpg"
+              class="card-img-top"
+              style="
+                aspect-ratio: 2 / 1;
+                object-fit: cover;
+                object-position: center;
+              "
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">111$</p>
+              <a href="#" class="btn btn-primary w-100">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg my-2">
+          <div class="card" style="max-width: 1000px">
+            <img
+              src="./Image/iphone.jpg"
+              class="card-img-top"
+              style="
+                aspect-ratio: 2 / 1;
+                object-fit: cover;
+                object-position: center;
+              "
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">111$</p>
+              <a href="#" class="btn btn-primary w-100">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg my-2">
+          <div class="card" style="max-width: 1000px">
+            <img
+              src="./Image/iphone.jpg"
+              class="card-img-top"
+              style="
+                aspect-ratio: 2 / 1;
+                object-fit: cover;
+                object-position: center;
+              "
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">111$</p>
+              <a href="#" class="btn btn-primary w-100">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg my-2">
+          <div class="card" style="max-width: 1000px">
+            <img
+              src="./Image/iphone.jpg"
+              class="card-img-top"
+              style="
+                aspect-ratio: 2 / 1;
+                object-fit: cover;
+                object-position: center;
+              "
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">111$</p>
+              <a href="#" class="btn btn-primary w-100">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg my-2">
+          <div class="card" style="max-width: 1000px">
+            <img
+              src="./Image/iphone.jpg"
+              class="card-img-top"
+              style="
+                aspect-ratio: 2 / 1;
+                object-fit: cover;
+                object-position: center;
+              "
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">111$</p>
+              <a href="#" class="btn btn-primary w-100">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg my-2">
+          <div class="card" style="max-width: 1000px">
+            <img
+              src="./Image/iphone.jpg"
+              class="card-img-top"
+              style="
+                aspect-ratio: 2 / 1;
+                object-fit: cover;
+                object-position: center;
+              "
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">111$</p>
+              <a href="#" class="btn btn-primary w-100">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg my-2">
+          <div class="card" style="max-width: 1000px">
+            <img
+              src="./Image/iphone.jpg"
+              class="card-img-top"
+              style="
+                aspect-ratio: 2 / 1;
+                object-fit: cover;
+                object-position: center;
+              "
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">111$</p>
+              <a href="#" class="btn btn-primary w-100">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg my-2">
+          <div class="card" style="max-width: 1000px">
+            <img
+              src="./Image/iphone.jpg"
+              class="card-img-top"
+              style="
+                aspect-ratio: 2 / 1;
+                object-fit: cover;
+                object-position: center;
+              "
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">111$</p>
+              <a href="#" class="btn btn-primary w-100">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg my-2">
+          <div class="card" style="max-width: 1000px">
+            <img
+              src="./Image/iphone.jpg"
+              class="card-img-top"
+              style="
+                aspect-ratio: 2 / 1;
+                object-fit: cover;
+                object-position: center;
+              "
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">111$</p>
+              <a href="#" class="btn btn-primary w-100">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
