--- a/yourCard.html
+++ b/yourCard.html
@@ -22,8 +22,52 @@
   </head>
   <body>
     <div class="container-lg">
-      <div class="row gap-3 justify-content-md-center mt-3"></div>
+      <div class="row gap-3 justify-content-md-center my-5"></div>
     </div>
+    <div
+      class="position-fixed bottom-0 bg-dark w-100 py-2 d-flex justify-content-center align-items-center gap-2"
+    >
+      <h4 class="mt-1 text-info d-inline">
+        Total = <span class="text-warning total-price">$0</span>
+      </h4>
+      <button class="btn btn-outline-success buy">Buy</button>
+    </div>
+
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Alert</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to delete that <b>Product?</b>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-danger ok">Ok</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
